# Info-Security-Homework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bad_dct.cu  bwm.cu  dct.cu  dct.py  gen_cos.py  mydct.cu  myutils.cpp  svd_3x3.cu
demo/: demo_pic.py  demo_video.cu  make_report.py  test_gpu.py  test_python.py  test_tool.py  test_video.py
script/: aaa  bwm.sh  install_opencv.sh  run.sh
src/: bwm.cu  cli.cu  constants.h  cusolver_utils.cpp  dct.py  dwt.cu  embed.cu  embed.py  gen_cos.py  mmd.cu  mydct.cu  myutils.cpp  old-bwm.cu  svd.cu  svd.py  wm_core.cpp
test/: embed.cu  embed.py  extract.cu  extract.py  helloworld.cu  makelena.py  svd.py  tandp.cu  test_svd.cu  testdwt.cu
